--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,6 @@
+<script src='https://surikov.github.io/webaudiofont/npm/dist/WebAudioFontPlayer.js'></script>
+<script src="https://surikov.github.io/webaudiofontdata/sound/0250_Acoustic_Guitar_sf2_file.js"></script>
+<script src="https://surikov.github.io/RiffShareAndroid/app/src/main/assets/0340_Aspirin_sf2_file.js"></script>
 <script src="index.js" type="module" defer async></script>
 <link rel="stylesheet" href="index.css">
 <title>Guitar Chords</title>
